--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: msachdeva/xz-repo:dta
+          tags: msachdeva/xz-repo:latest
 
       - name: Manifest Generation
         run: |
@@ -53,7 +53,7 @@ jobs:
             --access-token "${{ secrets.GITHUB_TOKEN }}" \
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
-            --artifact-path "msachdeva/xz-repo:${{ env.tag-version }}"
+            --artifact-path "msachdeva/xz-repo:latest"
 
             # The docker image name:tag of the newly built image
             # --artifact-path "my-image-name:${{ env.tag-version }}"
