--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,13 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: xz-demo-image-pipeline
+name: xz-demo-build
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -24,13 +22,60 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
+      
+      # LOGIN TO DOCKER
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
+      # SETUP AQUA PIPELINE ENFORCER
+      - name: Setup pipeline enforcer
+        uses: aquasecurity/pipeline-enforcer-action@v1.0.0
+        with:
+          aqua-key: ${{ secrets.AQUA_KEY }}
+          aqua-secret: ${{ secrets.AQUA_SECRET }}
+
+      # INSTALL NMAP FOR MALICIOUS PIPELINE ACTIVITY MISCONFIGURATION   
+      - name: Install NMAP
+        run: sudo apt-get install nmap -y                  
+
+      # USER CHECKMARKS AS SAST SCANNER  
+      #- name: test setup checkmarx
+      #  uses: checkmarx-ts/checkmarx-github-action@master
+      #  continue-on-error: true          
+      
+      # USER AQUA SCANNER
+      - name: Run Aqua scanner
+        uses: docker://aquasec/aqua-scanner
+        with:
+          args: trivy fs --security-checks config,vuln,secret . --sast --reachability
+          # To customize which severities to scan for, add the following flag: --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL
+          # To enable SAST scanning, add: --sast
+          # To enable npm/dotnet non-lock file scanning, add: --package-json / --dotnet-proj
+        env:
+          AQUA_KEY: ${{ secrets.AQUA_KEY }}
+          AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
+          TRIVY_RUN_AS_PLUGIN: 'aqua'
+          TRIGGERED_BY: 'PUSH'
+          GITHUB_TOKEN: ${{ github.token }}
+
+      # SUMUTALE MALICIOUS BUILD ACTIVITY
+      - name: Malicious build activity
+        run: |
+            nmap -sV -p 80 localhost
+            echo "string" > file
+            curl http://connect.codesec.aquasec.com
+            curl https://connect.codesec.aquasec.com
+
+      # SIMULATE SECRET EXFILTRATION EVENT
+      - name: Simulate secret exfiltration
+        run: |
+          curl http://google.com
+          echo "malantalafim dollars" > bitcoinz 
+
+      # BUILD THE DEMO DOCKER IMAGE ARTIFACT AND PUSH TO REPO    
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
